server nest 초기 셋팅

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "client",
     "server",
     "common"
-  ]
+  ],
+  "scripts": {
+    "api-dev" : "yarn workspace server api-dev",
+    "socket-dev" : "yarn workspace server socket-dev"
+  }
 }
