chore: 리액트 프로젝트 세팅
웹팩, 바벨, Eslint, Prettier, 테스트, 진입점, tsconfig, gitignore

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "common"
   ],
   "scripts": {
+    "client": "yarn workspace client",
     "api-dev" : "yarn workspace server api-dev",
     "socket-dev" : "yarn workspace server socket-dev"
   }
