--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,8 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "lib": ["DOM", "esnext"],
+    "lib": ["DOM"],
     "jsx": "react-jsx",
-    "module": "commonjs",
-    "allowJs": true,
-    "sourceMap": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "baseUrl": ".",
     "outDir": "./build",
     "paths": {
