--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.16.1",
+    "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "common": "1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "tailwindcss": "^3.2.4",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
@@ -47,6 +52,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "msw": "^0.48.2",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
@@ -60,5 +66,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
