chore: css theme 세팅

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.9",
+    "@tanstack/react-query-devtools": "^4.16.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.2",
@@ -35,6 +36,7 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.0",
     "core-js": "^3.26.0",
@@ -53,6 +55,8 @@
     "jest-environment-jsdom": "^29.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "msw": "^0.48.2",
+    "postcss": "^8.4.19",
+    "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
     "react-refresh": "^0.14.0",
     "style-loader": "^3.3.1",
