--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -17,6 +17,8 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "paths": {}
+    "paths": {
+      "@schemas/*": ["schemas/*"],
+    }
   }
 }
