--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "author": "Cola <bcad1591@gmail.com>",
   "license": "MIT",
   "private": true,
-  "workspaces": [
-    "client",
-    "server",
-    "common"
-  ],
+
+  "workspaces": {
+    "packages": ["client","common", "server/**"],
+    "nohoist": ["server", "server/**"]
+  },
   "scripts": {
     "client": "yarn workspace client",
-    "api-dev" : "yarn workspace server api-dev",
-    "socket-dev" : "yarn workspace server socket-dev"
+    "api-dev": "yarn workspace server api-dev",
+    "socket-dev": "yarn workspace server socket-dev"
   }
 }
