refactor: user repo create 수정 #9

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@schemas/*": ["dao/schemas/*"],
       "@repository/*": ["dao/repository/*"],
+      "@utils/*": ["utils/*"],
       "@user/*": ["apps/api/src/user/*"],
     }
   }
