chore: 린트, 프리티어, tsconfig 공통 설정 변경

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -5,10 +5,7 @@
     "jest": true,
     "commonjs": true
   },
-  "extends": [
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended"
-  ],
+  "extends": ["plugin:react/recommended", "plugin:react-hooks/recommended"],
   "rules": {
     "react/prop-types": "off",
     "no-param-reassign": "off",
