--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,7 @@
     "test:e2e": "jest --config ./apps/server/test/jest-e2e.json"
   },
   "dependencies": {
-    "common" : "1.0.0",
+    "shared" : "1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
