--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.10.9",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
-    "shared": "1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "shared": "1.0.0",
     "tailwindcss": "^3.2.4",
     "zustand": "^4.1.4"
   },
