--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
-    "common": "1.0.0",
+    "@asnity/shared": "1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
