--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "private": true,
 
   "workspaces": {
-    "packages": ["client","common", "server/**"],
+    "packages": ["client","shared", "server"],
     "nohoist": ["server", "server/**"]
   },
   "scripts": {
     "client": "yarn workspace client",
+    "server": "yarn workspace server",
     "api-dev": "yarn workspace server api-dev",
     "socket-dev": "yarn workspace server socket-dev"
   }
