chore: ts.config에 api경로 추가
- @api/* : ["apps/api/*"]

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,6 +22,7 @@
       "@repository/*": ["dao/repository/*"],
       "@utils/*": ["utils/*"],
       "@user/*": ["apps/api/src/user/*"],
+      "@api/*": ["apps/api/*"],
     }
   }
 }
