--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "endOfLine": "lf",
+  "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "printWidth": 100
 }
