--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "mongoose": "^6.7.2",
+    "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -57,7 +58,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "winston": "^3.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
