chore: logo icon 추가, icons 경로 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,8 @@
       "@components/*": ["src/common/components/*"],
       "@features/*": ["src/features/*"],
       "@mocks/*": ["src/mocks/*"],
-      "@stores/*": ["src/stores/*"]
+      "@stores/*": ["src/stores/*"],
+      "@icons/*": ["src/assets/icons/*"]
     }
   },
   "include": ["src", "config"],
