--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.4.3",
     "shared": "1.0.0",
     "tailwindcss": "^3.2.4",
