feat: 특정 사용자 정보 요청 처리 #22

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,6 +21,7 @@
       "@schemas/*": ["dao/schemas/*"],
       "@repository/*": ["dao/repository/*"],
       "@utils/*": ["utils/*"],
+      "@custom_pipe/*": ["custom_pipe/*"],
       "@user/*": ["apps/api/src/user/*"],
       "@api/*": ["apps/api/*"],
     }
