--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/parser": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "class-validator-mongo-object-id": "^1.3.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
