--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "argon2": "^0.30.2",
+    "cookie-parser": "^1.4.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
