chore: eslint global에 JSX 명시

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -5,6 +5,9 @@
     "jest": true,
     "commonjs": true
   },
+  "globals": {
+    "JSX": true
+  },
   "extends": ["plugin:react/recommended", "plugin:react-hooks/recommended"],
   "rules": {
     "react/prop-types": "off",
