--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.4.3",
+    "react-toastify": "^9.1.1",
     "shared": "1.0.0",
     "tailwindcss": "^3.2.4",
     "zustand": "^4.1.4"
@@ -45,6 +46,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.2.2",
+    "dotenv": "^16.0.3",
     "eslint": "8.22",
     "eslint-config-naver": "^2.1.0",
     "eslint-config-prettier": "^8.5.0",
