--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config apps/socket/test/jest-e2e.json"
+    "test:e2e": "jest --config apps/socket/test/jest-e2e.json",
+    "test:report" : "jest --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
     "@asnity/shared": "1.0.0",
@@ -58,6 +59,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "jest-junit": "^14.0.1",
     "mongoose": "^6.7.2",
     "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
@@ -100,5 +102,4 @@
       "@mock/(.*)": "<rootDir>/__mock__/$1"
     }
   }
-
 }
