--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.14",
+    "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
