feat: api server 에러발생시 noti
- nest js interceptor 추가
- sentry exception report
- slack bot 에러 msg 전송

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "client": "yarn workspace client",
     "server": "yarn workspace server",
     "api-dev": "yarn workspace server api-dev",
-    "socket-dev": "yarn workspace server socket-dev"
+    "socket-dev": "yarn workspace server socket-dev",
+    "api-prod": "yarn workspace server api-prod",
+    "socket-prod": "yarn workspace server socket-prod"
   }
 }
