--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "start:dev": "nest start --watch",
     "api-dev": "NODE_ENV=dev nest start api --watch",
     "socket-dev": "NODE_ENV=dev nest start socket --watch",
+    "api-prod": "NODE_ENV=prod nest start api --watch",
+    "socket-prod": "NODE_ENV=prod nest start socket",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,7 +23,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config apps/socket/test/jest-e2e.json",
-    "test:report" : "jest --ci --reporters=default --reporters=jest-junit"
+    "test:report": "jest --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
     "@asnity/shared": "1.0.0",
@@ -45,6 +47,10 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@sentry/minimal": "^6.19.7",
+    "@sentry/node": "^7.20.0",
+    "@slack/client": "^5.0.2",
+    "@slack/webhook": "^6.1.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
@@ -61,6 +67,7 @@
     "jest": "28.1.3",
     "jest-junit": "^14.0.1",
     "mongoose": "^6.7.2",
+    "nest-raven": "^9.0.0",
     "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
