--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "api-dev": "yarn workspace server api-dev",
     "socket-dev": "yarn workspace server socket-dev",
     "api-prod": "yarn workspace server api-prod",
-    "socket-prod": "yarn workspace server socket-prod"
+    "socket-prod": "yarn workspace server socket-prod",
+    "server-test": "yarn workspace server test:report"
   }
 }
