build: cookie-parser 라이브러리 설치

--- a/server/package.json
+++ b/server/package.json
@@ -51,6 +51,7 @@
     "@sentry/node": "^7.20.0",
     "@slack/client": "^5.0.2",
     "@slack/webhook": "^6.1.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
