refactor: 컴포넌트 디렉토리 위치 수정

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,7 +8,7 @@
     "paths": {
       "@pages/*": ["src/pages/*"],
       "@layouts/*": ["src/common/layouts/*"],
-      "@components/*": ["src/common/components/*"],
+      "@components/*": ["src/components/*"],
       "@features/*": ["src/features/*"],
       "@mocks/*": ["src/mocks/*"],
       "@stores/*": ["src/stores/*"],
