feat: 타입 파일 정의할 `@@types` alias 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,11 +14,10 @@
       "@icons/*": ["src/assets/icons/*"],
       "@constants/*": ["src/constants/*"],
       "@apis/*": ["src/apis/*"],
+      "@@types/*": ["src/types/*"]
     }
   },
   "include": ["src", "config"],
   "exclude": ["node_modules", "build", "dist"],
-  "references": [
-    { "path":  "../shared" }
-  ]
+  "references": [{ "path": "../shared" }]
 }
