--- a/server/package.json
+++ b/server/package.json
@@ -45,8 +45,10 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/mongoose": "^9.2.1",
+    "@nestjs/platform-socket.io": "^9.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nestjs/websockets": "^9.2.0",
     "@sentry/minimal": "^6.19.7",
     "@sentry/node": "^7.20.0",
     "@slack/client": "^5.0.2",
@@ -56,6 +58,7 @@
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -72,6 +75,7 @@
     "nest-raven": "^9.0.0",
     "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
+    "socket.io": "^4.5.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
