feat: 커뮤니티에 사용자 추가 service layer 구현 #95

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,6 +23,7 @@
       "@utils/*": ["utils/*"],
       "@custom_pipe/*": ["custom_pipe/*"],
       "@user/*": ["apps/api/src/user/*"],
+      "@community/*": ["apps/api/src/community/*"],
       "@api/*": ["apps/api/*"],
       "@mock/*": ["__mock__/*"],
     }
