--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -26,6 +26,7 @@
     ],
     "@typescript-eslint/no-var-requires": "off",
     "react/no-unknown-property": "off",
-    "no-duplicate-imports": "off"
+    "no-duplicate-imports": "off",
+    "@typescript-eslint/consistent-type-imports": "error"
   }
 }
