--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -27,6 +27,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "react/no-unknown-property": "off",
     "no-duplicate-imports": "off",
-    "@typescript-eslint/consistent-type-imports": "error"
+    "@typescript-eslint/consistent-type-imports": "error",
+    "no-nested-ternary": "off"
   }
 }
