--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM"],
+    "lib": [
+      "DOM",
+      "es2015.iterable"
+    ],
     "jsx": "react-jsx",
     "baseUrl": ".",
     "outDir": "./build",
