--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-modal": "^3.16.1",
