--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -22,7 +22,9 @@
       "@repository/*": ["dao/repository/*"],
       "@utils/*": ["utils/*"],
       "@custom_pipe/*": ["custom_pipe/*"],
+      "@auth/*": ["apps/api/src/auth/*"],
       "@user/*": ["apps/api/src/user/*"],
+      "@channel/*": ["apps/api/src/channel/*"],
       "@community/*": ["apps/api/src/community/*"],
       "@api/*": ["apps/api/*"],
       "@mock/*": ["__mock__/*"],
