chore: @utils/* 경로 추가

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,7 @@
       "@apis/*": ["src/apis/*"],
       "@hooks/*": ["src/hooks/*"],
       "@errors/*": ["src/errors/*"],
+      "@utils/*": ["src/utils/*"],
       "@@types/*": ["src/types/*"],
       "@/*": ["src/*"]
     }
