feat: socket namespace 별 연결 #175

--- a/server/apps/socket/tsconfig.app.json
+++ b/server/apps/socket/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "outDir": "../../dist/apps/server"
+    "outDir": "../../dist/apps/socket"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
