refactor: socket interface shared 폴더로 선언 #175

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -28,6 +28,7 @@
       "@community/*": ["apps/api/src/community/*"],
       "@api/*": ["apps/api/*"],
       "@mock/*": ["__mock__/*"],
+      "@socketInterface/*": ["../shared/socket/*"]
     }
   }
 }
