--- a/server/package.json
+++ b/server/package.json
@@ -76,6 +76,7 @@
     "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
     "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
@@ -111,8 +112,11 @@
       "@utils/(.*)": "<rootDir>/utils/$1",
       "@custom_pipe/(.*)": "<rootDir>/custom_pipe/$1",
       "@user/(.*)": "<rootDir>/apps/api/src/user/$1",
+      "@channel/(.*)": "<rootDir>/apps/api/src/channel/$1",
+      "@community/(.*)": "<rootDir>/apps/api/src/community/$1",
       "@api/(.*)": "<rootDir>/apps/api/$1",
-      "@mock/(.*)": "<rootDir>/__mock__/$1"
+      "@mock/(.*)": "<rootDir>/__mock__/$1",
+      "@socketInterface/*": "<rootDir>/../shared/socket/$1"
     },
     "coveragePathIgnorePatterns": [
       ".module.ts",
