etc: community unit test skip

--- a/server/package.json
+++ b/server/package.json
@@ -107,6 +107,8 @@
       "@utils/(.*)": "<rootDir>/utils/$1",
       "@custom_pipe/(.*)": "<rootDir>/custom_pipe/$1",
       "@user/(.*)": "<rootDir>/apps/api/src/user/$1",
+      "@channel/(.*)": "<rootDir>/apps/api/src/channel/$1",
+      "@community/(.*)": "<rootDir>/apps/api/src/community/$1",
       "@api/(.*)": "<rootDir>/apps/api/$1",
       "@mock/(.*)": "<rootDir>/__mock__/$1"
     },
