docker image env
(cherry picked from commit b9ebca5de5e9551e5da9b8649a664cab7d3c1e2d)

--- a/server/apps/api/Dockerfile
+++ b/server/apps/api/Dockerfile
@@ -3,6 +3,19 @@ FROM node:18-alpine
 
 MAINTAINER NayoungKwon
 
+# 환경변수 설정
+ARG MONGODB_URL
+ENV MONGODB_URL=$MONGODB_URL
+
+ARG SENTRY_DSN
+ENV SENTRY_DSN=$SENTRY_DSN
+
+ARG ERROR_SLACK_WEBHOOK
+ENV ERROR_SLACK_WEBHOOK=$ERROR_SLACK_WEBHOOK
+
+ARG JWT_SECRET
+ENV JWT_SECRET=$JWT_SECRET
+
 # yarn 설치
 #RUN npm install -g yarn
 
