--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
     "shared": "1.0.0",
+    "socket.io-client": "^4.5.4",
     "tailwindcss": "^3.2.4",
     "zustand": "^4.1.4"
   },
