test: e2e test 초안
(cherry picked from commit 820a124c25233e06f0822ca843d6e8396e3aadb5)

--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config apps/socket/test/jest-e2e.json",
+    "test:e2e": "NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit --config apps/api/test/jest-e2e.json",
     "test:report": "jest --coverage --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
@@ -115,6 +115,7 @@
       "@user/(.*)": "<rootDir>/apps/api/src/user/$1",
       "@channel/(.*)": "<rootDir>/apps/api/src/channel/$1",
       "@community/(.*)": "<rootDir>/apps/api/src/community/$1",
+      "@chat-list/(.*)": "<rootDir>/apps/api/src/chat-list/$1",
       "@api/(.*)": "<rootDir>/apps/api/$1",
       "@mock/(.*)": "<rootDir>/__mock__/$1",
       "@socketInterface/*": "<rootDir>/../shared/socket/$1"
