--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "axios": "^1.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "class-validator-mongo-object-id": "^1.3.0",
