--- a/server/package.json
+++ b/server/package.json
@@ -55,7 +55,7 @@
     "@slack/webhook": "^6.1.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
+    "@types/jest": "^29.2.4",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.7",
     "@types/socket.io": "^3.0.2",
@@ -68,7 +68,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
+    "jest": "^29.3.1",
     "jest-junit": "^14.0.1",
     "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.2",
