fix: jwt secrete import
(cherry picked from commit a24db09414f9cd2c492b18a5e7e4be1b8c23d1e0)

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -78,7 +78,7 @@ jobs:
         run: yarn install
 
       - name: 테스트 수행과 테스트 결과 xml파일로 생성
-        run: yarn server-test | tee ./coverage.txt
+        run: JWT_SECRET=${{ secrets.JWT_SECRET }} yarn server-test | tee ./coverage.txt
 
       - name: 테스트 코멘트 작성
         uses: MishaKav/jest-coverage-comment@main
