fix: socket secrete 반영
(cherry picked from commit 6d30d34fa859ca78a036468f70b81bef97159f77)

--- a/server/apps/socket/Dockerfile
+++ b/server/apps/socket/Dockerfile
@@ -4,8 +4,8 @@ FROM node:18-alpine
 MAINTAINER NayoungKwon
 
 # 환경변수 설정
-ARG MONGODB_URL
-ENV MONGODB_URL=$MONGODB_URL
+ARG JWT_SECRET
+ENV JWT_SECRET=$JWT_SECRET
 
 # yarn 설치
 #RUN npm install -g yarn
