--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -11,7 +11,7 @@ on:
       - closed
 
 jobs:
-  build:
+  build_api:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
@@ -39,17 +39,6 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/asnity-api:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - name: Socket Server 이미지 빌드 및 도커 허브 푸쉬
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./server/apps/socket/Dockerfile
-          push: true
-          build-args: |
-            MONGODB_URL=${{ secrets.MONGODB_URL }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/asnity-socket:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
       - name: Slack Merge bot 실행
         uses: 8398a7/action-slack@v3
         with:
@@ -59,6 +48,30 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_ASUMI_URL }}
         if: always()
+  build_socket:
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: 체크아웃
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: DockerHub 로그인
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Socket Server 이미지 빌드 및 도커 허브 푸쉬
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./server/apps/socket/Dockerfile
+          push: true
+          build-args: |
+            JWT_SECRET=${{ secrets.JWT_SECRET }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/asnity-socket:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
   Test:
     runs-on: ubuntu-latest
     steps:
@@ -97,7 +110,7 @@ jobs:
         if: failure()
   nCloudDeploy:
     if: github.event.pull_request.merged == true
-    needs: build
+    needs: [build_api, build_socket]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
