--- a/server/package.json
+++ b/server/package.json
@@ -112,6 +112,7 @@
       "@schemas/(.*)": "<rootDir>/dao/schemas/$1",
       "@repository/(.*)": "<rootDir>/dao/repository/$1",
       "@utils/(.*)": "<rootDir>/utils/$1",
+      "@custom/(.*)": "<rootDir>/custom/$1",
       "@custom_pipe/(.*)": "<rootDir>/custom_pipe/$1",
       "@user/(.*)": "<rootDir>/apps/api/src/user/$1",
       "@channel/(.*)": "<rootDir>/apps/api/src/channel/$1",
