--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=test jest --runInBand --detectOpenHandles --forceExit --config apps/api/test/jest-e2e.json",
+    "test:e2e": "NODE_ENV=test jest --coverage --ci --reporters=default --reporters=jest-junit --runInBand --detectOpenHandles --forceExit --config apps/api/test/jest-e2e.json",
     "test:report": "jest --coverage --ci --reporters=default --reporters=jest-junit"
   },
   "dependencies": {
