--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "shared": "1.0.0"
   },
   "devDependencies": {
+    "@liaoliaots/nestjs-redis": "^9.0.4",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/mongoose": "^9.2.1",
@@ -69,6 +70,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "ioredis": "^5.2.4",
     "jest": "^29.3.1",
     "jest-junit": "^14.0.1",
     "mongodb-memory-server": "^8.10.1",
