--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@loadable/component": "^5.15.2",
     "@tanstack/react-query": "^4.16.1",
+    "@types/loadable__component": "^5.13.4",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "immer": "^9.0.16",
