--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "@sentry/node": "^7.20.0",
     "@slack/client": "^5.0.2",
     "@slack/webhook": "^6.1.0",
+    "@types/cache-manager-ioredis": "^2.0.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.2.4",
@@ -64,6 +65,8 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "axios": "^1.2.1",
+    "cache-manager": "^5.1.4",
+    "cache-manager-ioredis": "^2.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "class-validator-mongo-object-id": "^1.3.0",
@@ -79,6 +82,7 @@
     "nest-raven": "^9.0.0",
     "nest-winston": "^1.8.0",
     "prettier": "^2.3.2",
+    "redis": "^4.5.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "source-map-support": "^0.5.20",
