--- a/server/apps/api/Dockerfile
+++ b/server/apps/api/Dockerfile
@@ -10,6 +10,12 @@ ARG ERROR_SLACK_WEBHOOK
 ENV ERROR_SLACK_WEBHOOK ${ERROR_SLACK_WEBHOOK}
 ARG JWT_SECRET
 ENV JWT_SECRET ${JWT_SECRET}
+ARG REDIS_PORT
+ENV REDIS_PORT ${REDIS_PORT}
+ARG REDIS_PW
+ENV REDIS_PW ${REDIS_PW}
+ARG MONGODB_ATLAS
+ENV MONGODB_ATLAS ${MONGODB_ATLAS}
 
 # yarn 설치
 #RUN npm install -g yarn
