--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build_api:
-    if: ${{ github.event.pull_request.merged == true  && contains(github.ref, 'dev-be')}}
+    if: ${{ github.event.pull_request.merged == true  && ( contains(github.ref, 'dev-be') || contains(github.ref, 'main') ) }}
     runs-on: ubuntu-latest
     steps:
       - name: 체크아웃
@@ -50,7 +50,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_ASUMI_URL }}
         if: always()
   build_socket:
-    if: ${{ github.event.pull_request.merged == true  && contains(github.ref, 'dev-be')}}
+    if: ${{ github.event.pull_request.merged == true  && ( contains(github.ref, 'dev-be') || contains(github.ref, 'main') ) }}
     runs-on: ubuntu-latest
     steps:
       - name: 체크아웃
@@ -110,7 +110,7 @@ jobs:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_FAIL_WEBHOOK_URL }}
         if: failure()
   nCloudDeploy:
-    if: ${{ github.event.pull_request.merged == true  && contains(github.ref, 'dev-be')}}
+    if: ${{ github.event.pull_request.merged == true  && ( contains(github.ref, 'dev-be') || contains(github.ref, 'main') ) }}
     needs: [build_api, build_socket]
     runs-on: ubuntu-latest
     steps:
