--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -75,6 +75,14 @@ jobs:
           cache-to: type=gha,mode=max
   Test:
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: 체크아웃
         uses: actions/checkout@v2
