fix: 정식 개발 phase 종료에 따른 수정  - merge slack 알림 제거  - sentry 전송 제거

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -40,15 +40,15 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/asnity-api:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - name: Slack Merge bot 실행
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          author_name: Backend dev PR merge!
-          fields: repo,commit,message,author
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_ASUMI_URL }}
-        if: always()
+#      - name: Slack Merge bot 실행
+#        uses: 8398a7/action-slack@v3
+#        with:
+#          status: ${{ job.status }}
+#          author_name: Backend dev PR merge!
+#          fields: repo,commit,message,author
+#        env:
+#          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_ASUMI_URL }}
+#        if: always()
   build_socket:
     if: ${{ github.event.pull_request.merged == true  && ( contains(github.ref, 'dev-be') || contains(github.ref, 'main') ) }}
     runs-on: ubuntu-latest
