fix: 서버 확인용 임시 배포 조건 추가

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main", "dev","dev-be" ]
     paths: 'server/**'
   pull_request:
-    branches: [ "main", "dev","dev-be" ]
+    branches: [ "main", "dev","dev-be","dev-ny" ]
     paths: 'server/**'
     types:
       - closed
